--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "date-fns": "^3.1.0",
     "dropzone": "^6.0.0-beta.2",
     "firebase": "^10.7.1",
+    "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.307.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "papaparse": "^5.4.1",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
