--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@sendgrid/mail": "^8.1.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
@@ -39,6 +40,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
     "dropzone": "^6.0.0-beta.2",
+    "emoji-picker-react": "^4.6.11",
     "firebase": "^10.7.1",
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.307.0",
