--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.1.0",
     "dropzone": "^6.0.0-beta.2",
+    "embla-carousel-react": "^8.0.0-rc19",
     "emoji-picker-react": "^4.6.11",
     "firebase": "^10.7.1",
     "http-proxy-middleware": "^2.0.6",
@@ -67,6 +68,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "react-video-thumbnail": "^0.1.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
