--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
+    "react-multi-select-component": "^4.3.4",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
