--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
+    "@material-tailwind/react": "^2.1.8",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -39,7 +40,7 @@
     "@types/googlemaps": "^3.43.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.1.0",
+    "date-fns": "^3.3.1",
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel-react": "^8.0.0-rc19",
     "emoji-picker-react": "^4.6.11",
@@ -51,6 +52,7 @@
     "papaparse": "^5.4.1",
     "prisma": "^5.7.1",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
