--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.1.0",
     "@material-tailwind/react": "^2.1.8",
+    "@next/third-parties": "^14.1.0",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -20,6 +21,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -40,6 +42,7 @@
     "@types/googlemaps": "^3.43.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "dropzone": "^6.0.0-beta.2",
     "embla-carousel-react": "^8.0.0-rc19",
@@ -47,7 +50,7 @@
     "firebase": "^10.7.1",
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.307.0",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "papaparse": "^5.4.1",
     "prisma": "^5.7.1",
