--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-multi-select-component": "^4.3.4",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
@@ -70,6 +71,7 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
