add event payment flow

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sendgrid/mail": "^8.1.0",
+    "@stripe/connect-js": "^3.3.6",
+    "@stripe/react-connect-js": "^3.3.8",
+    "@stripe/react-stripe-js": "^2.7.1",
     "@tabler/icons-react": "^3.5.0",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
