--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.307.0",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
+    "nextjs-cors": "^2.2.0",
     "papaparse": "^5.4.1",
     "prisma": "^5.7.1",
     "react": "^18",
@@ -68,6 +69,8 @@
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "trpc-api-boilerplate": "^1.0.48",
+    "trpc-openapi": "^1.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
