--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
@@ -49,7 +49,8 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.3.1",
     "dropzone": "^6.0.0-beta.2",
-    "embla-carousel-react": "^8.0.0-rc19",
+    "embla-carousel-class-names": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "emoji-picker-react": "^4.6.11",
     "firebase": "^10.7.1",
     "http-proxy-middleware": "^2.0.6",
