--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "embla-carousel-react": "^8.3.0",
     "emoji-picker-react": "^4.6.11",
     "firebase": "^10.7.1",
+    "framer-motion": "^11.5.6",
     "http-proxy-middleware": "^2.0.6",
     "lucide-react": "^0.307.0",
     "next": "^14.1.0",
